<resources>
    <string name="app_name">FinCal</string>
    <string name="button_start">Let\'s go!</string>
    <string name="choose_category">Choose a category</string>
    <string name="not_available">Sorry. Not yet available  :(</string>
    <string name="welcome_message">Welcome to the best financial calculator!</string>
    <string name="which_calculator">Which calculator do you need?</string>
    <string name="quote_1">A wise man saves for the future, but a foolish man devours all he has.  \n– Proverbs 21:20</string>
    <string name="quote_2">Wealth consists not in having great possessions, but in having few wants.\n — Epictetus</string>
    <string name="category_auto">Auto</string>
    <string name="category_investment">Investment</string>
    <string name="category_mortgage">Mortgage and Real Estate</string>
    <string name="category_other">Other</string>
    <string name="category_retirement">Retirement</string>
    <string name="category_tax">Tax and Salary</string>
    <string name="button_back">Go back</string>
    <string name="button_back_to_input">Back to Input</string>
    <string name="calculate_button">Calculate</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="amount_dollar">Amount ($)</string>
    <string name="annual">Annual</string>
    <string name="ending_balance">Ending Balance</string>
    <string name="interest">Interest</string>
    <string name="interest_rate">Interest rate (%)</string>
    <string name="loan_amount">Loan amount ($)</string>
    <string name="loan_term">Loan term (year)</string>
    <string name="percent">%</string>
    <string name="principal">Principal</string>
    <string name="year">Year</string>
    <string name="empty_fields_warning">Please fill in all required fields</string>
    <string name="invalid_input_format_warning">Invalid input format</string>
    <string name="loan_term_warning">Loan term must be greater than 0</string>
    <string name="calc_amortization">Amortization Calculator</string>
    <string name="calc_apr">APR Calculator</string>
    <string name="calc_debt_income_ratio">Debt-to-Income Ratio Calculator</string>
    <string name="calc_down_payment">Down Payment Calculator</string>
    <string name="calc_fha_loan">FHA Loan Calculator</string>
    <string name="calc_heloc">HELOC Calculator</string>
    <string name="calc_home_equity_loan">Home Equity Loan Calculator</string>
    <string name="calc_house_affordability">House Affordability Calculator</string>
    <string name="calc_mortgage">Mortgage Calculator</string>
    <string name="calc_mortgage_payoff">Mortgage Payoff Calculator</string>
    <string name="calc_refinance">Refinance Calculator</string>
    <string name="calc_rent">Rent Calculator</string>
    <string name="calc_rent_buy">Rent vs. Buy Calculator</string>
    <string name="calc_rental_property">Rental Property Calculator</string>
    <string name="calc_va_mortgage">VA Mortgage Calculator</string>
    <string name="down_payment">Down payment ($)</string>
    <string name="hoa_fee">HOA fee ($)</string>
    <string name="home_insurance">Home insurance ($)</string>
    <string name="home_price">Home price ($)</string>
    <string name="include_taxes_costs">Include annual tax &amp; costs</string>
    <string name="other_costs">Other costs ($)</string>
    <string name="pmi_insurance">PMI insurance ($)</string>
    <string name="property_tax">Property tax (%)</string>
    <string name="biweekly_payment">Biweekly payment</string>
    <string name="default_value_per_month">500</string>
    <string name="extra_monthly_payment">Repayments with extra payments</string>
    <string name="normal_repayment">Normal repayment</string>
    <string name="one_time">one time ($)</string>
    <string name="original_loan_amount">Original loan amount ($)</string>
    <string name="original_loan_term">Original loan term (year)</string>
    <string name="payback_altogether">Payback altogether</string>
    <string name="per_month">per month ($)</string>
    <string name="per_year">per year ($)</string>
    <string name="remaining_term">Remaining term (year)</string>
    <string name="repayment_options">Repayment options:</string>
    <string name="annual_household_income">Annual household income ($)</string>
    <string name="down_payment_no_sign">Down payment</string>
    <string name="hoa_fee_no_sign">HOA fee or co-op fee (per year)</string>
    <string name="home_insurance_no_sign">Home insurance (per year)</string>
    <string name="monthly_debt_payback">Total monthly debt payback ($)</string>
    <string name="mortgage_loan_term">Mortgage loan term (year)</string>
    <string name="property_tax_no_sign">Property tax (per year)</string>
    <string name="auto_loan">Auto loan ($)</string>
    <string name="credit_cards">Credit cards ($)</string>
    <string name="debt_to_income_dti_ratio">Debt-to-income (DTI) ratio</string>
    <string name="debts_expenses">Monthly Debts / Expenses</string>
    <string name="homeowner_insurance">Homeowner insurance ($)</string>
    <string name="income_before_tax"><![CDATA[Annual Income & Savings (Before Tax)]]></string>
    <string name="investment_amp_savings"><![CDATA[Investment & savings ($)]]></string>
    <string name="mortgage_payment">Mortgage payment ($)</string>
    <string name="other_income">Other income ($)</string>
    <string name="other_loans_amp_liabilities"><![CDATA[Other loans & liabilities ($)]]></string>
    <string name="pension_amp_social_security"><![CDATA[Pension & social security ($)]]></string>
    <string name="property_tax_no_percent">Property tax ($)</string>
    <string name="rental_cost">Rental cost ($)</string>
    <string name="salary_amp_earned_income"><![CDATA[Salary & earned income ($)]]></string>
    <string name="student_loan">Student loan ($)</string>
    <string name="your_annual_pre_tax_income">Your annual pre-tax income ($)</string>
    <string name="your_monthly_debt_payback">Your monthly debt payback ($)</string>
    <string name="cash_out_amount">Cash out amount ($)</string>
    <string name="costs_amp_fees"><![CDATA[Costs & fees ($)]]></string>
    <string name="current_loan">Current Loan</string>
    <string name="monthly_payment">Monthly payment ($)</string>
    <string name="new_loan">New Loan</string>
    <string name="new_loan_term_year">New loan term (year)</string>
    <string name="points_discount_points">Points (discount points)</string>
    <string name="remaining_balance">Remaining balance ($)</string>
    <string name="time_remaining_year">Time remaining (year)</string>
    <string name="annual_increase">Annual\nIncrease</string>
    <string name="closing_cost_dollar">Closing cost ($)</string>
    <string name="cost_to_sell">Cost to sell (%)</string>
    <string name="do_you_know_the_sell_price">Do you know the sell price?</string>
    <string name="first_year_income_and_expense">First Year Income and Expense</string>
    <string name="hoa_fee_dollar">HOA fee ($)</string>
    <string name="holding_length_year">Holding length (year)</string>
    <string name="income">Income</string>
    <string name="maintenance">Maintenance ($)</string>
    <string name="management_fee">Management fee (%)</string>
    <string name="monthly_rent">Monthly rent ($)</string>
    <string name="need_repairs">Need repairs?</string>
    <string name="other_monthly_income">Other monthly income ($)</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_price">Purchase price ($)</string>
    <string name="recurring_operating_expenses">Recurring Operating Expenses</string>
    <string name="repair_cost">Repair cost ($)</string>
    <string name="sell">Sell</string>
    <string name="sell_price">Sell price ($)</string>
    <string name="total_insurance">Total insurance (%)</string>
    <string name="use_loan">Use loan?</string>
    <string name="vacancy_rate">Vacancy rate (%)</string>
    <string name="value_after_repairs">Value after repairs ($)</string>
    <string name="value_appreciation_per_year">Value appreciation (per year %)</string>
    <string name="house_value">House value ($)</string>
    <string name="loan_fees">Loan fees ($)</string>
    <string name="loaned_fees">Loaned fees ($)</string>
    <string name="pmi_insurance_per_year">PMI insurance ($) per year</string>
    <string name="upfront_fees">Upfront fees ($)</string>
    <string name="quote_3">Do not save what is left after spending; instead, spend what is left after saving. \n — Warren Buffett</string>
    <string name="calc_auto_loan">Auto Loan Calculator</string>
    <string name="calc_cash_back_low_interest">Cash Back or Low Interest Calculator</string>
    <string name="calc_auto_lease">Auto Lease Calculator</string>
    <string name="quote_4">Beware of little expenses; a small leak will sink a great ship. \n — Benjamin Franklin</string>
    <string name="calc_average_return">Average return Calculator</string>
    <string name="calc_bond">Bond Calculator</string>
    <string name="calc_cd">CD Calculator</string>
    <string name="calc_compound_interest">Compound Interest Calculator</string>
    <string name="calc_finance">Finance Calculator</string>
    <string name="calc_future_value">Future Value Calculator</string>
    <string name="calc_interest">Interest Calculator</string>
    <string name="calc_interest_rate">Interest Rate Calculator</string>
    <string name="calc_investment">Investment Calculator</string>
    <string name="calc_irr">IRR Calculator</string>
    <string name="calc_mutual_fund">Mutual Fund Calculator</string>
    <string name="calc_payback_period">Payback Period Calculator</string>
    <string name="calc_present_value">Present Value Calculator</string>
    <string name="calc_roi">ROI Calculator</string>
    <string name="calc_savings">Savings Calculator</string>
    <string name="calc_simple_interest">Simple Interest Calculator</string>
    <string name="compound">Compound</string>
    <string name="pay_back">Pay back</string>
    <string name="quote_5">Never spend your money before you have it. \n — Thomas Jefferson</string>
    <string name="calc_401k">401K Calculator</string>
    <string name="calc_annuity">Annuity Calculator</string>
    <string name="calc_annuity_payout">Annuity Payout Calculator</string>
    <string name="calc_ira">IRA Calculator</string>
    <string name="calc_pension">Pension Calculator</string>
    <string name="calc_retirement">Retirement Calculator</string>
    <string name="calc_rmd">RMD Calculator</string>
    <string name="calc_roth_ira">Roth IRA Calculator</string>
    <string name="calc_social_security">Social Security Calculator</string>
    <string name="quote_6">A budget is telling your money where to go instead of wondering where it went. \n — Dave Ramsey</string>
    <string name="calc_estate_tax">Estate Tax Calculator</string>
    <string name="calc_income_tax">Income Tax Calculator</string>
    <string name="calc_marriage_tax">Marriage Tax Calculator</string>
    <string name="calc_salary">Salary Calculator</string>
    <string name="calc_take_home_paycheck">Take-Home-Paycheck Calculator</string>
    <string name="quote_7">For the love of money is a root of all kinds of evil, and by craving it, some have wandered away from the faith and pierced themselves with many griefs. \n — 1 Timothy 6:10</string>
    <string name="calc_boat_loan">Boat Loan Calculator</string>
    <string name="calc_budget">Budget Calculator</string>
    <string name="calc_business_loan">Business Loan Calculator</string>
    <string name="calc_college_cost">College Cost Calculator</string>
    <string name="calc_commission">Commission Calculator</string>
    <string name="calc_credit_card">Credit Card Calculator</string>
    <string name="calc_credit_cards_payoff">Credit Cards Payoff Calculator</string>
    <string name="calc_currency">Currency Calculator</string>
    <string name="calc_debt_consolidation">Debt Consolidation Calculator</string>
</resources>