<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_third"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/year"
            android:textColor="@color/text_secondary"
            android:textStyle="bold"
            tools:ignore="VisualLintSystemUi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/interest"
            android:textColor="@color/text_secondary"
            android:textStyle="bold"
            tools:ignore="VisualLintSystemUi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/principal"
            android:textColor="@color/text_secondary"
            android:textStyle="bold"
            tools:ignore="VisualLintSystemUi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ending_balance"
            android:textColor="@color/text_secondary"
            android:textStyle="bold"
            tools:ignore="VisualLintSystemUi" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="SpeakableTextPresentCheck">

        <TableLayout
            android:id="@+id/amortizationTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*" />
    </ScrollView>

    <Button
        android:id="@+id/btnBackToInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_calculate"
        android:text="@string/button_back_to_input"
        android:textColor="@color/text_secondary" />

</LinearLayout>